# mywordle

./: Readme.md  output.txt  pyproject.toml
backend/: app.py  dictonary_checker.py  models.py  pdf_read.py
backend/word_collect/: pdf_read.py  word_collect.py
frontend/: mockup.drawio  package-lock.json  package.json
frontend/src/: index.tsx  multi_input.tsx  renderHooks.tsx
frontend/src/wordle/: Wordle.tsx
