[tool.poetry]
name = "mywordle"
version = "0.1.0"
description = ""
authors = ["uc_dev <atrantic0314@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
beautifulsoup4 = "^4.11.1"
nltk = "^3.7"
PyPDF2 = "^1.27.12"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
